--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
-baseURL: https://fnof.github.io
+baseURL: https://shidher.github.io
 languageCode: en-us
 defaultContentLanguage: en
-title: Fnof
+title: Shidher's notes
 theme: papercss-hugo-theme
 
 taxonomies:
